Bug: Tutorial is covered by monster
Feature: Companionship
    - Make it so partyMembers can talk about recent stuff at none events
Bug: Red text on generic weapon
Bug: Player went to grab item, game froze, first partyMember dead
Fix: Add bloodfrenzy buff
Strange red colouring on selection
Fix: Put 1 and 2 in gearPanel
Fix: Total number of skills
Fix: Make colour border
Fix: Tooltip for consumables are used instantly
Bug: Prevent candle uses when dead
Bug: Take All breaks
Bug: red text
Bug: help sheet
Bug:Shopkeeper's wax display did not show up if two toast notifications were present
Bug: ToastPanel's don't fade in properly all the time  (don't know whats cuasing this)

CURRENTLY DOING
---------------
Strange red colouring for some items
Make buffs and debuffs refresh
Class select now easier to read
Make advantage status effect better
Add bonus PDEF and MDEF to monsters (negative for wraiths cause their MDEF shouldn't be high)
Balance: Nerfed Bash, Taunt now costs 2 less MP

Add toast notification flame
Make quest completed notification seperate from normal completition
Speed Runner Tester: Jeffrey Zhao

VERIFICATION NEEDED
-------------------
Bug: Candlemancy kinda bugged but need to figure out why 



NEAR FUTURE
----------------
Fix: Put all loading for everything at the start
Feature: Sound effects and music
Feature: Saving
Feature: Ending and beginning cutscenes
Feature: Gameover screen

FUTURE/MAYBE
------------
Fix: Make it so active skills are greyed out if 4 actives are already selected
Fix: Make a way to halt a fading coroutine should another one start
UI: Make status effects do the fade animation monster displays do
UI: status effects don't display in the statusPanel
UI: Add heal/focus animations on effect
Future: Add combat order on the side
Future: Animation skip on click
UI: Tiny arrow to swap party member
Tutorial: Clicking actions progresses the tutorial, but this might not be the worst thing




