@@ -28,6 +28,7 @@ namespace General {
         public bool firstCandle = true;                 /// <value> Flag for if the player hasn't encountered their first candle </value> 
         public bool firstShop = true;                   /// <value> Flag for if the player hasn't encountered their first shop </value> 
         public bool firstCandleCombat = true;           /// <value> Flag for if the player hasn't brought a candle into combat for the first time </value>
+        public bool firstChampion = true;               /// <value> Flag for if the player hasn't encountered their first champion monster </value>
 
         private string activeScene = "";                /// <value> Current scene being displayed </value>
         private string initialScene = "Loading";        /// <value> Scene to begin game with </value>
